2008-06-21  Dave Morrison  <drm@finkproject.org>

	* DISTRIBUTION: value needs to be 10.5 for the 0.9.0 distribution

2008-06-16  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped distribution version to 0.9.0 in the 
	10.4 tree

2006-03-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.8.1 in the 
	10.4 tree

2006-01-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* initializing the 10.4 tree 
	