@@ -1,3 +1,8 @@
+2008-07-06  Dave Morrison  <drm@finkproject.org>
+
+	* inject.pl: adapt the script so that, if passed the flag "-updates",
+	it will correctly inject an -updates tarball
+	
 2008-06-21  Dave Morrison  <drm@finkproject.org>
 
 	* DISTRIBUTION: value needs to be 10.5 for the 0.9.0 distribution
